<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.aku.hassannaqvi.covid_sero.ui.other.EndingActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.covid_sero.ui.other.EndingActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fldGrpEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- istatus  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVistatus"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/qtxt_istatus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_istatus"
                            android:text="@string/istatus" />

                        <TextView
                            android:id="@+id/q_istatus"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_istatus"
                            android:layout_alignBottom="@id/qtxt_istatus"
                            android:text="@string/Q_istatus" />

                    </RelativeLayout>


                    <RadioGroup
                        android:id="@+id/istatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/istatus01"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/istatus02" />

                        <RadioButton
                            android:id="@+id/istatus02"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/istatus02" />

                        <RadioButton
                            android:id="@+id/istatus03"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/istatus03" />

                        <RadioButton
                            android:id="@+id/istatus04"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/istatus04" />

                        <RadioButton
                            android:id="@+id/istatus05"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/istatus05" />

                        <RadioButton
                            android:id="@+id/istatus06"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/istatus06" />

                        <RadioButton
                            android:id="@+id/istatus07"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/istatus07" />

                        <RadioButton
                            android:id="@+id/istatus96"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/istatus96" />

                        <EditText
                            android:id="@+id/istatus96x"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/istatus96"
                            android:maxLength="40"
                            android:tag="istatus96"
                            android:text='@{istatus96.checked ? istatus96x.getText().toString(): ""}'
                            android:visibility='@{istatus96.checked ? View.VISIBLE : View.GONE}' />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!--ENDBUTTON linearlayout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@color/colorPrimary"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="End Interview"
                    android:textColor="@color/white" />
                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>